se agrega texto

--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae repellendus ad, dolorem quibusdam nemo commodi facere sequi nostrum, ratione magnam esse. Veniam maiores praesentium eius! Ipsum libero cumque nam debitis temporibus est corporis. Aperiam quis quaerat mollitia tempora nisi accusamus vitae eligendi dolorem distinctio nemo ut incidunt, voluptate placeat error, culpa quas eveniet dignissimos quia reprehenderit eius iusto accusantium officiis dolores! Minus voluptatem ullam, inventore provident animi optio labore quam voluptatum alias voluptas maiores aut nemo mollitia eaque in beatae tenetur omnis explicabo asperiores fuga natus ipsam veniam. Cumque ratione dolores sit distinctio amet, quisquam consectetur quo pariatur ad sapiente!
         </p>
     </section>
+
+    <div>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, repudiandae.
+        </p>
+    </div>
     
 </body>
 </html>
